# NoiSDE

./: .gitignore  DATA_LICENSE.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: config_index.csv
configs/experiments/alanine_transport/: default_alanine_gbn2.yaml  smoke_tabulated.yaml
configs/experiments/core_ablation/: smoke_variant_matrix.yaml  variant_matrix.yaml
configs/experiments/free_energy/: default_mbar.yaml  (+1 more)
configs/figures/: chi2_demarcation_overlay.yaml  component_gains_by_family.yaml  main_result_overview.yaml
configs/templates/: noisde_training.yaml
data/metadata/: run_index_alanine_reference.csv  run_index_alanine_transport.csv  run_index_appendix_path_space_control_cost.csv  run_index_appendix_regularizer.csv  run_index_appendix_reinforce.csv  run_index_chi2_demarcation.csv  run_index_component_ablation.csv  run_index_cost_benchmark.csv  run_index_free_energy_estimation.csv  run_index_ood_generalization.csv  run_index_path_step_convergence.csv  run_index_pf_companion_diagnostic.csv  run_index_relaxation_audit.csv  run_index_sensitivity.csv  run_index_solvent_model_sensitivity.csv  run_index_toy_sampling.csv
scripts/: evaluate_pf_reweighting_smoke.py  generate_figures.py  run_ablation_smoke.py  run_mbar_estimate.py  run_pf_audit_smoke.py  summarize_component_ablation.py  train_molecular_smoke.py  train_openmm_bridge.py  train_toy_smoke.py
src/noisde/: __init__.py  config.py  types.py
tests/: test_component_ablation_analysis.py  test_config_contracts.py  test_core_algorithm.py  test_optional_adapters.py
(+57 files in other folders)
